careerbee-frontend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: careerbee-frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        node-alias: careerbee-prod-app  # 💡 이 노드에만 스케줄링
      imagePullSecrets:
        - name: ecr-creds
      containers:
        - name: frontend
          image: 418295722497.dkr.ecr.ap-northeast-2.amazonaws.com/kubeadm/frontend:latest
          ports:
            - containerPort: 80
